# Dessert-Museum

./: Assignment1.cpp  CMakeLists.txt  CreateModel.cpp  README.md  candyhearts.tga  chocolate.tga  gingerbread.tga  icecreammelt.tga  jellyBites.tga  loadTGA.h  splatter.tga  sprinkles.tga
Creations/: Candy_Carousel  Candy_Guard  Candy_Swing  Gingerbread_House  The_Museum  The_Museum_OLDVERSION
